testing for prod

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.9",
     "nuxt": "^2.0.0",
-    "qs": "^6.9.3"
+    "qs": "^6.9.3",
+    "@nuxtjs/vuetify": "^1.0.0"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.0.0",
     "concurrently": "^5.1.0",
     "nodemon": "^2.0.3"
   }
